# klocklararen

./: README.md  pyproject.toml  se.danielnylander.klocklararen.desktop
.tx/: config
po/: klocklararen.pot  sv.mo  sv.po
src/klocklararen/: main.py
